# newsbr

./: README.md  pyproject.toml
newsbr/: __init__.py  __main__.py  cli.py  google_news.py  http.py  schema.py  search_log.py  store.py  themes.py
newsbr/outlets/: __init__.py  conjur.py  estadao.py  folha.py  globo.py  migalhas.py  piaui.py
